fixed tabs z-index adjustment

--- a/lp-suresmile-2023-styles.scss
+++ b/lp-suresmile-2023-styles.scss
@@ -20,7 +20,7 @@ $text: #231f20;
 
 
 /* -------  Fixed Tabs ------------ */
-#fixed-tabs {position: fixed;bottom: 0; right: 0; width: 100%;  text-align: center; line-height: 1; display: flex; z-index: 200;}
+#fixed-tabs {position: fixed;bottom: 0; right: 0; width: 100%;  text-align: center; line-height: 1; display: flex; z-index: 1100;}
 #fixed-tabs a {font-family: $font2; font-size: 13px; color: #fff; font-weight: 700; text-transform: uppercase;padding: 14px 0;  flex: 1;   }
 #fixed-tabs .ra {flex: 2;}
 #fixed-tabs a:nth-of-type(odd) { background-color: darken($primary, 15%);}
